--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+uvg266 (0.8.1-1) unstable; urgency=medium
+
+  * Sync to upstream
+
+ -- Rafael Diniz <rafael@rhizomatica.org>  Sun, 21 Jul 2024 23:49:00 +0100
+
 uvg266 (0.8.0-1) unstable; urgency=medium
 
   * Initial import
